added maxpermgen option in README execution suggestion